--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,25 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0-M1'
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.0-M1'
+
     // https://mvnrepository.com/artifact/org.jetbrains/annotations
-    implementation group: 'org.jetbrains', name: 'annotations', version: '19.0.0'
-    compileOnly group: 'org.json', name: 'json', version: '20190722'
-    implementation 'net.dv8tion:JDA:4.2.0_181'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '20.1.0'
+
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation group: 'org.json', name: 'json', version: '20201115'
+
+    // https://github.com/DV8FromTheWorld/JDA
+    implementation 'net.dv8tion:JDA:4.2.0_229'
 
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     compile group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
+
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0-alpha1'
 
+    implementation 'io.sentry:sentry:4.3.0'
 
 }
 
